# SmartSwitch

./: .gitignore  CMakeLists.txt  clang-format
Drv/: CMakeLists.txt
Drv/inc/: esp_io_expander.h  esp_lcd_panel_io_additions.h  gt911.h  hardware_conf.h  lv_conf.h  mcpwm.h  st7701.h
Drv/src/: esp_io_expander.c  esp_lcd_panel_io_3wire_spi.c  gt911.c  i2c_driver.c  mcpwm.c  st7701.c
Hal/: CMakeLists.txt
Hal/inc/: lvgl_port.h
Hal/src/: lvgl_port.c
Screens/: CMakeLists.txt
Screens/inc/: main_screen.h
Screens/src/: icn_wifi_green.c  icn_wifi_green2.c  icn_wifi_no_signal.c  icn_wifi_red.c  icn_wifi_yellow.c  main_screen.c
Threads/: CMakeLists.txt
Threads/inc/: task_wifi.h
Threads/src/: task_wifi.c
images/: icn_wifi_no_signal.xcf  icn_wifi_yellow2.xcf
main/: CMakeLists.txt  idf_component.yml  main.c
scope/: init_lcd.sal  lcd_runtime.sal  run.sal  run_to_compare.sal  test1  test2  test3  test4  test5
